03_code2/grade.txt
Grading at Sun Aug  2 08:59:50 UTC 2020
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:6:3: error: ‘starCount’ undeclared (first use in this function)
   starCount = 0;
   ^
temp.c:6:3: note: each undeclared identifier is reported only once for each function it appears in
temp.c:19:9: error: expected ‘;’ before ‘}’ token
      i=j}
         ^
temp.c:27:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
